--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "inert": "^5.1.0",
     "mongoose": "^5.1.7",
-    "lodash": "^4.17.10",
+    "mongoose-auto-increment": "5.0.1",
+    "lodash": "^4.17.10"
   },
   "devDependencies": {
     "hapi": "^17.5.3",
