--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "app-module-path": "2.2.0",
+    "bcrypt": "^3.0.7",
+    "bunyan": "1.8.12",
     "inert": "^5.1.0",
+    "lodash": "^4.17.10",
     "mongoose": "^5.1.7",
-    "mongoose-auto-increment": "5.0.1",
-    "lodash": "^4.17.10"
+    "mongoose-auto-increment": "5.0.1"
   },
   "devDependencies": {
     "hapi": "^17.5.3",
-    "joi": "^13.5.2",
+    "joi": "^10.6.0",
     "nodemon": "^1.18.4"
   }
 }
